--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="#home">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Acerca de nosotros</a>
+              <a class="nav-link" href="#team">Nuestro equipo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Nuestra historia</a>
+              <a class="nav-link" href="#stores">Nuestras instalaciones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Contacto</a>
+              <a class="nav-link" href="#about">Sobre nosotros</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <section id="home">
-      <div class="container fluid">
-        <div class="row mt-4">
+      <div class="container mt-4">
+        <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card">
               <div class="card-header">
@@ -77,7 +77,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4">
+          <div class="col-12 col-md-6 col-lg-4 mt-3 mt-md-0 mt-lg-0">
             <div class="card">
               <div class="card-header">
                 <h4>IPhone 16 Pro</h4>
@@ -101,7 +101,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4">
+          <div class="col-12 col-md-6 col-lg-4 mt-3 mt-md-3 mt-lg-0">
             <div class="card">
               <div class="card-header">
                 <h4>IPhone 16 Pro Max</h4>
@@ -128,16 +128,114 @@
         </div>
         <div class="row">
             <p class="text-center mt-2"><a class="link-offset-2" href="#">Ver más</a></p>
-            <h4 class="text-center">¡Descubre la mejor tecnología en teléfonos móviles!</h4>
+            <h4 class="text-center"><span class="border-bottom">¡Descubre la mejor tecnología en teléfonos móviles!</span></h4>
         </div>
+      </section>
+      <section id="team">
+        <div class="container mt-4">
         <div class="row">
           <div class="col-lg-6 col-md-6 col-12">
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <div class="card-header">
+                <h4>Nuestro equipo</h4>
+              </div>
+              <img src="./assets/images/equipoApple.webp" class="card-img-top mx-auto" alt="...">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Contamos con un equipo de trabajo de más de 1000 personas a lo largo del mundo.</p>
               </div>
             </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center">
+            <div class="mt-3">
+              <h4>Heading</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores, necessitatibus aliquam debitis a autem pariatur. Placeat ab nobis saepe blanditiis temporibus id qui! Sapiente, omnis cumque consequuntur tenetur iusto sunt.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
+    <section id="stores">
+      <div class="container mt-4">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center">
+          <div>
+            <h4>Heading</h4>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores, necessitatibus aliquam debitis a autem pariatur. Placeat ab nobis saepe blanditiis temporibus id qui! Sapiente, omnis cumque consequuntur tenetur iusto sunt.</p>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-12 mt-3">
+          <div class="card">
+            <div class="card-header">
+              <h4>Nuestras instalaciones</h4>
+            </div>
+            <img src="./assets/images/tiendaapple.jpg" class="card-img-top mx-0" alt="...">
+            <div class="card-body">
+              <p class="card-text">Contamos con más de 850 tiendas repartidas globalmente.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
+    <section id="about">
+      <div class="container mt-4">
+        <div class="row">
+          <h4 class="text-center"><span class="border-bottom">Sobre Nosotros</span></h4>
+          <div class="col-12 col-md-3 offset-md-2">
+            <div class="card border-white shadow-sm p-3 mb-5 bg-body-tertiary rounded">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-12 text-center">
+                    <img src="./assets/images/mision.png" alt="mision de la empresa" class="src" width="64" height="64">
+                    <h4 class="text-md-center">Nuestra misión</h4>
+                    <p class="text-start">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Nullam consectetur, nunc nec vehicula ultricies, nunc nunc
+                      ultricies nunc, vitae ultricies nunc nunc nec nunc.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-3 my-3 my-md-0">
+            <div class="card border-white shadow-sm p-3 mb-5 bg-body-tertiary rounded">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-12 text-center">
+                    <img src="./assets/images/binoculares.png" alt="vision de la empresa" class="src" width="64" height="64">
+                    <h4 class="text-md-center">Nuestra visión</h4>
+                    </h4>
+                    <p class="text-start">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Nullam consectetur, nunc nec vehicula ultricies, nunc nunc
+                      ultricies nunc, vitae ultricies nunc nunc nec nunc.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-3">
+            <div class="card border-white shadow-sm p-3 mb-5 bg-body-tertiary rounded">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-12 text-center">
+                    <img src="./assets/images/pergamino.png" alt="valores de la empresa" class="src" width="64" height="64">
+                    <h4 class="text-md-center">Nuestros valores</h4>
+                    </h4>
+                    <p class="text-start">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Nullam consectetur, nunc nec vehicula ultricies, nunc nunc
+                      ultricies nunc, vitae ultricies nunc nunc nec nunc.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
           </div>
         </div>
       </div>
